<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
>
  <item
    android:id="@+id/opt_options"
    android:title="@string/mnu_options"
    android:icon="@android:drawable/ic_menu_preferences"
  />
  <item
    android:id="@+id/opt_passwords"
    android:title="@string/mnu_passwords"
    android:icon="@drawable/ic_menu_login"
  />
  <item
    android:id="@+id/opt_donate"
    android:title="@string/mnu_donate"
    android:icon="@drawable/ic_menu_money"
  />
  <item
    android:id="@+id/opt_help"
    android:title="@string/mnu_help"
    android:icon="@android:drawable/ic_menu_help"
  />
  <item
    android:id="@+id/opt_exit"
    android:title="@string/mnu_exit"
    android:icon="@android:drawable/ic_menu_close_clear_cancel"
  />
</menu>
